.informationTittle was added a display flex, as well as a center align and a margin of 50px (top-botton). .informationPlaceHolders was created with a display flex, align center and a gap of 50px to separate the different placeHolders. .placeHolder was created with a solid light blue border of 5px, and a fixed width and height.

--- a/style.css
+++ b/style.css
@@ -99,6 +99,19 @@ button,
     margin: 50px 0;
 }
 
+.informationPlaceHolders {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+}
+
+.placeHolder {
+    border: 5px solid #3882F6;
+    border-radius: 10px;
+    width: 200px;
+    height: 220px;
+}
+
 .quoteSection {
     background-color: #E5E7EB;
 }
